# notepad

./: .gitignore  README.md
TicTacToe/: Makefile  main.cpp  sampleTest.cpp  ttt
TicTacToe/controller/: .nfs000000000124ffff0000fc20  TTTController.cpp  TTTController.h  ttt_controller.cpp  ttt_controller.h
TicTacToe/model/: Player.cpp  Player.h
classNotes/10_10/: client_server.ps
classNotes/9_19/: a.out  fileIO.cpp
controller/: Manager.cpp  Manager.h
model/: users_db.txt
model/Notes/: Note.cpp  Note.h
model/Users/: adminUser.cpp  adminUser.h  (+2 more)
pp2/: CMakeLists.txt  Makefile  filePlayers.txt  filePlayers.txt3  main.cpp  run  sampleTest.cpp
pp2/controller/: TTTController.cpp  TTTController.h
pp2/model/: Board.cpp  Board.h  Player.cpp  Player.h  PlayerDao.cpp  PlayerDao.h  a.out  filePlayers.txt
pp2/testDir/: CMakeLists.txt  test.cpp
pp2/view/: index.html  test.html
pp2/view/cgi-bin/: filePlayers.txt  ttt.cgi
pp2/view/css/: style.css
pp2/view/js/: script.js
pp2_her/: web.txt  web_auto.txt
pp4/: CMakeLists.txt  Final_project_proposal_rchowda.docx  Makefile  main.cpp  notes.cgi
pp4/controller/: Manager.cpp  Manager.h
pp4/docs/: Final_project_proposal_rchowda.docx
pp4/lib/rapidjson/: document.h
pp4/model/: Dao.cpp  Dao.h  User.cpp  User.h
pp4/model/Notes/: Note.cpp  Note.h  Notes.cpp  Notes.h
pp4/model/User/: User.cpp  User.h
pp4/model/Users/: adminUser.cpp  adminUser.h  regularUser.cpp  regularUser.h
pp4/model/Users/User/: User.cpp  User.h
pp4/view/: index - Copy.html  index.html  login.html
pp4/view/css/: style.css
pp4/view/js/: script.js
pp4/view/login/: index.html
pp4/view/login/js/: script.js
view/: index.html
(+6 files in other folders)
